--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-appsync": "^1.153.1",
-    "@aws-cdk/aws-cognito": "^1.153.1",
-    "@aws-cdk/aws-dynamodb": "^1.153.1",
-    "@aws-cdk/aws-lambda": "^1.153.1",
-    "aws-cdk-lib": "2.20.0",
+    "@aws-cdk/aws-appsync": "^1.152.0",
+    "@aws-cdk/aws-cognito": "^1.152.0",
+    "@aws-cdk/aws-dynamodb": "^1.152.0",
+    "@aws-cdk/aws-lambda": "^1.152.0",
+    "@aws-cdk/core": "^1.153.1",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.16"
   },
