--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "devDependencies": {
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
-    "aws-cdk": "^2.20.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
@@ -26,6 +25,7 @@
     "@aws-cdk/aws-lambda": "^1.152.0",
     "@aws-cdk/core": "^1.153.1",
     "constructs": "^10.0.0",
+    "dynamodb-onetable": "^2.3.6",
     "source-map-support": "^0.5.16"
   },
   "main": "index.js",
