--- a/lambda-fns/package.json
+++ b/lambda-fns/package.json
@@ -2,7 +2,7 @@
   "name": "lambda-fns",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "test.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,5 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "uuid": "^8.3.2"
-  }
+  },
+  "type": "module"
 }
