--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
+  "peerDependencies": {
+    "aws-cdk-lib": "^2.27.0",
+    "constructs": "^10.1.26"
+  },
   "dependencies": {
-    "@aws-cdk/aws-appsync": "^1.152.0",
-    "@aws-cdk/aws-cognito": "^1.152.0",
-    "@aws-cdk/aws-dynamodb": "^1.152.0",
-    "@aws-cdk/aws-lambda": "^1.152.0",
-    "@aws-cdk/core": "^1.153.1",
-    "@aws-sdk/client-dynamodb": "^3.78.0",
+    "aws-cdk-lib": "^2.27.0",
+    "constructs": "^10.1.26",
+    "@aws-cdk/aws-appsync-alpha": "^2.27.0",
     "cdk-pipelines-github": "^0.2.60",
-    "constructs": "^10.0.0",
     "dynamodb-onetable": "^2.3.6",
     "source-map-support": "^0.5.16"
   },
